fixed recuirsive pipeline

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "from my_splitter import MySplitter\n",
     "from my_transformer import MyTransformer\n",
+    "from recursive_pipeline import RecursivePipeline\n",
     "\n",
     "tqdm.pandas()\n",
     "\n",
@@ -116,47 +117,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10f88493f06344cea17f5251ba488dee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([10.829223, 10.829223, 10.829223, 10.532826, 10.532826, 10.532826,\n",
+       "       10.532826, 10.829223, 10.829223, 10.829223, 10.829223, 10.829223,\n",
+       "       10.532826, 10.532826, 10.829223, 10.532826, 10.829223, 10.829223,\n",
+       "       10.829223, 10.829223, 10.532826, 10.829223, 10.532826, 10.532826,\n",
+       "       10.829223, 10.829223, 10.829223, 10.829223, 10.829223, 10.829223],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = data.drop(columns=[\"visitors\"]).reset_index(drop=True)\n",
-    "y = data[\"visitors\"].reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.base import BaseEstimator, RegressorMixin\n",
+    "pipeline = RecursivePipeline(\n",
+    "    pipeline=Pipeline(\n",
+    "        steps=[\n",
+    "            (\"transformer\", MyTransformer()),\n",
+    "            (\n",
+    "                \"model\",\n",
+    "                XGBRegressor(\n",
+    "                    objective=\"reg:squaredlogerror\",\n",
+    "                    random_state=42,\n",
+    "                    enable_categorical=True,\n",
+    "                ),\n",
+    "            ),\n",
+    "        ]\n",
+    "    )\n",
+    ")\n",
     "\n",
+    "X = data.drop(columns=[\"visitors\"]).reset_index(drop=True)[:100]\n",
+    "X_pred = data.drop(columns=[\"visitors\"]).reset_index(drop=True)[100:130]\n",
+    "y = data[\"visitors\"].reset_index(drop=True)[:100]\n",
     "\n",
-    "class RecursivePipeline(BaseEstimator, RegressorMixin):\n",
-    "    def __init__(self, pipeline):\n",
-    "        self.pipeline = pipeline\n",
-    "\n",
-    "    def fit(self, X, y):\n",
-    "        self.pipeline.fit(X, y)\n",
-    "        return self\n",
-    "\n",
-    "    def predict_batch(self, group):\n",
-    "        return self.pipeline.predict(group)\n",
-    "\n",
-    "    def predict(self, X=None):\n",
-    "        predictions = []\n",
-    "\n",
-    "        X_cols = X.columns\n",
-    "        predictions = (\n",
-    "            X.sort_values(\"date\")\n",
-    "            .groupby(by=[\"date\"], group_keys=False)[X_cols]\n",
-    "            .progress_apply(\n",
-    "                lambda group: self.predict_batch(group), include_groups=False\n",
-    "            )\n",
-    "        )\n",
-    "\n",
-    "        return np.concatenate(predictions.to_numpy())"
+    "pipeline.fit(X, y)\n",
+    "pipeline.predict(X_pred)"
    ]
   },
   {
@@ -195,9 +211,9 @@
     "    cv=cv,\n",
     "    param_distributions=param_grid,\n",
     "    scoring=\"neg_root_mean_squared_log_error\",\n",
-    "    # n_jobs=-1,\n",
+    "    n_jobs=2,\n",
     "    verbose=10,\n",
-    "    n_iter=1,\n",
+    "    n_iter=10,\n",
     ")\n",
     "\n",
     "\n",
